# some-audiobook-player

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
examples/: play.rs  probe.rs  scan.rs
packaging/: some-audiobook-player.desktop
src/: app.rs  icons.rs  lib.rs  main.rs  mpris.rs  toast.rs
src/audio/: mod.rs  source.rs
